--- a/roles/galaxy-docker/tasks/delete/main.yml
+++ b/roles/galaxy-docker/tasks/delete/main.yml
@@ -21,7 +21,7 @@
 - name: Set parameters for deleting the test upgrade container
   set_fact:
     "{{item.key}}" : "{{item.value}}"
-  with_dict: "{{test_upgrade_settings}}"
+  with_dict: "{{galaxy_docker_upgrade_test_settings}}"
   when: delete_test_upgrade
 
 - name: Remove docker container
