--- a/roles/galaxy-docker/tasks/prerequisites/nginxsettings.yml
+++ b/roles/galaxy-docker/tasks/prerequisites/nginxsettings.yml
@@ -49,14 +49,14 @@
   set_fact:
     nginx_sites_test_upgrade:
       test_upgrade_galaxy:
-        - "listen {{test_upgrade_settings.public_galaxy_web_port }}"
+        - "listen {{galaxy_docker_upgrade_test_settings.public_galaxy_web_port }}"
         - "server_name {{ galaxy_web_urls | join(' ') }}"
         - "location / { proxy_pass http://test_upgrade_galaxy; }"
         - "client_max_body_size {{max_upload_size}}"
     nginx_configs_test_upgrade:
       upstream:
         - "{{nginx_configs.upstream[0]}}"
-        - "upstream test_upgrade_galaxy { server localhost:{{test_upgrade_settings.galaxy_web_port}}; }"
+        - "upstream test_upgrade_galaxy { server localhost:{{galaxy_docker_upgrade_test_settings.galaxy_web_port}}; }"
   when: galaxy_docker_test_upgrade
 
 - name: combine test upgrade profile with regular galaxy profile
@@ -130,7 +130,7 @@
     - ansible_selinux != False | bool
     - galaxy_docker_test_upgrade
   seport:
-    ports: "{{test_upgrade_settings.public_galaxy_web_port}}"
+    ports: "{{galaxy_docker_upgrade_test_settings.public_galaxy_web_port}}"
     setype: http_port_t
     proto: tcp
     state: present
