--- a/test/host_vars/cluster-test/upgrade.settings
+++ b/test/host_vars/cluster-test/upgrade.settings
@@ -1,6 +1,6 @@
-overwrite_config_files: False
+galaxy_docker_upgrade_overwrite_config_files: False
 
-test_upgrade_settings:
+galaxy_docker_upgrade_test_settings:
   galaxy_docker_docker_image: "bgruening/galaxy-stable:17.05"
   galaxy_docker_container_name: test_upgrade_galaxy
   galaxy_docker_export_location: "/data/galaxy/test_upgrade_galaxy/galaxy_storage"
