--- a/test/host_vars/cluster-test/web.settings
+++ b/test/host_vars/cluster-test/web.settings
@@ -1,14 +1,14 @@
 max_upload_size: "50g"
 
-galaxy_web_urls:
+galaxy_docker_web_urls:
   - example_host.org
   - galaxy.example_host.org
   - www.example_galaxy.org
 
 # remote listening ports
-public_galaxy_web_port: 80
+galaxy_docker_web_port_public: 80
 
 # Local listening ports
-galaxy_web_port: 8080
-#galaxy_ftp_port: 8021
-#galaxy_sftp_port: 8022
+galaxy_docker_web_port: 8080
+#galaxy_docker_ftp_port: 8021
+#galaxy_docker_sftp_port: 8022
