--- a/roles/galaxy-docker/tasks/prerequisites/nginxsettings.yml
+++ b/roles/galaxy-docker/tasks/prerequisites/nginxsettings.yml
@@ -17,13 +17,13 @@
   set_fact:
     nginx_sites:
       galaxy:
-        - "listen {{ public_galaxy_web_port }}"
-        - "server_name {{ galaxy_web_urls | join(' ') }}"
+        - "listen {{ galaxy_docker_web_port_public }}"
+        - "server_name {{ galaxy_docker_web_urls | join(' ') }}"
         - "location / { proxy_pass http://galaxy; }"
         - "client_max_body_size {{max_upload_size}}"
     nginx_configs:
       upstream:
-        - "upstream galaxy { server localhost:{{galaxy_web_port}}; }"
+        - "upstream galaxy { server localhost:{{galaxy_docker_web_port}}; }"
       proxy:
         - "proxy_set_header X-Real-IP $remote_addr"
         - "proxy_set_header X-Forwarded-Host $host"
@@ -49,14 +49,14 @@
   set_fact:
     nginx_sites_test_upgrade:
       test_upgrade_galaxy:
-        - "listen {{galaxy_docker_upgrade_test_settings.public_galaxy_web_port }}"
-        - "server_name {{ galaxy_web_urls | join(' ') }}"
+        - "listen {{galaxy_docker_upgrade_test_settings.galaxy_docker_web_port_public }}"
+        - "server_name {{ galaxy_docker_web_urls | join(' ') }}"
         - "location / { proxy_pass http://test_upgrade_galaxy; }"
         - "client_max_body_size {{max_upload_size}}"
     nginx_configs_test_upgrade:
       upstream:
         - "{{nginx_configs.upstream[0]}}"
-        - "upstream test_upgrade_galaxy { server localhost:{{galaxy_docker_upgrade_test_settings.galaxy_web_port}}; }"
+        - "upstream test_upgrade_galaxy { server localhost:{{galaxy_docker_upgrade_test_settings.galaxy_docker_web_port}}; }"
   when: galaxy_docker_test_upgrade
 
 - name: combine test upgrade profile with regular galaxy profile
@@ -119,7 +119,7 @@
 - name: Add public web port to se_linux
   when: ansible_selinux != False | bool
   seport:
-    ports: "{{public_galaxy_web_port}}"
+    ports: "{{galaxy_docker_web_port_public}}"
     setype: http_port_t
     proto: tcp
     state: present
@@ -130,7 +130,7 @@
     - ansible_selinux != False | bool
     - galaxy_docker_test_upgrade
   seport:
-    ports: "{{galaxy_docker_upgrade_test_settings.public_galaxy_web_port}}"
+    ports: "{{galaxy_docker_upgrade_test_settings.galaxy_docker_web_port_public}}"
     setype: http_port_t
     proto: tcp
     state: present
