--- a/test/group_vars/test/upgrade.settings
+++ b/test/group_vars/test/upgrade.settings
@@ -5,7 +5,7 @@ galaxy_docker_upgrade_test_settings:
   galaxy_docker_container_name: test_upgrade_galaxy
   galaxy_docker_export_location: "/data/galaxy/test_upgrade_galaxy/galaxy_storage"
   ufw_profile: test_upgrade_galaxy
-  galaxy_web_port: 8888
-  public_galaxy_web_port: 8880
+  galaxy_docker_web_port: 8888
+  galaxy_docker_web_port_public: 8880
   galaxy_brand: "Test upgrade of Galaxy to 17.05"
 
