--- a/roles/galaxy-docker/tasks/provision/installephemeris.yml
+++ b/roles/galaxy-docker/tasks/provision/installephemeris.yml
@@ -17,30 +17,30 @@
     state: present
     version: "{{ galaxy_docker_ephemeris_version }}"
     virtualenv: "{{galaxy_docker_docker_user_virtualenv}}"
-  when: not ephemeris_from_git
+  when: not galaxy_docker_ephemeris_from_git
 
 - name: Clean ephemeris git folder
   file:
     path: "{{galaxy_docker_ephemeris_dir}}"
     state: absent
-  when: ephemeris_from_git
+  when: galaxy_docker_ephemeris_from_git
 
 - name: Install ephemeris repo
   git:
     repo: "{{galaxy_docker_ephemeris_repo}}"
     dest: "{{galaxy_docker_ephemeris_dir}}"
     version: "{{galaxy_docker_ephemeris_branch}}"
-  when: ephemeris_from_git
+  when: galaxy_docker_ephemeris_from_git
 
 - name: Install ephemeris requirements
   pip:
     requirements: "{{galaxy_docker_ephemeris_dir}}/requirements.txt"
     state: present
     virtualenv: "{{galaxy_docker_docker_user_virtualenv}}"
-  when: ephemeris_from_git
+  when: galaxy_docker_ephemeris_from_git
 
 - name: Install ephemeris from git repo
   command: "{{galaxy_docker_docker_user_virtualenv}}/bin/python setup.py install"
   args:
     chdir: "{{galaxy_docker_ephemeris_dir}}"
-  when: ephemeris_from_git
+  when: galaxy_docker_ephemeris_from_git
