--- a/roles/galaxy-docker/vars/main.yml
+++ b/roles/galaxy-docker/vars/main.yml
@@ -12,10 +12,10 @@
 # vars file for galaxy-docker
 
 # vars for addldap
-ldap: "{{ ldap_defaults | combine(galaxy_docker_ldap_settings) }}"
+ldap: "{{ galaxy_docker_ldap_defaults | combine(galaxy_docker_ldap_settings) }}"
 
 # vars for cronbackupdb
-backup_galaxy_rsync_settings: "{{ default_rsync_settings | combine(galaxy_docker_backup_database_rsync_settings)  }}"
+backup_galaxy_rsync_settings: "{{ galaxy_docker_backup_rsync_settings_default | combine(galaxy_docker_backup_database_rsync_settings)  }}"
 
 # vars for installtools:
 galaxy_docker_ephemeris_package: ephemeris
