--- a/roles/galaxy-docker/tasks/main.yml
+++ b/roles/galaxy-docker/tasks/main.yml
@@ -56,7 +56,7 @@
     ansible_ssh_private_key_file: "{{galaxy_docker_docker_user_private_key}}"
 
 - include: template_galaxy_settings/main.yml
-  when: galaxy_docker_template_galaxy_settings
+  when: galaxy_docker_template
   become: "{{galaxy_docker_become}}"
   become_user: "{{galaxy_docker_web_user}}"
   vars:
