--- a/roles/galaxy-docker/tasks/prepare_docker/customimage.yml
+++ b/roles/galaxy-docker/tasks/prepare_docker/customimage.yml
@@ -12,12 +12,12 @@
 - name: Copy files to docker build directory
   copy:
     src: "{{galaxy_docker_custom_image_dir}}"
-    dest: "{{docker_build_dir}}/custom_image"
+    dest: "{{galaxy_docker_docker_build_dir}}/custom_image"
     mode: 0600
 
 - name: Template the Dockerfile
   template:
-    dest: "{{docker_build_dir}}/custom_image/Dockerfile"
+    dest: "{{galaxy_docker_docker_build_dir}}/custom_image/Dockerfile"
     src: Dockerfile.j2
     mode: 0600
     force: yes
@@ -25,12 +25,12 @@
 - name: Build custom docker image
   galaxy_docker_docker_image:
     name: "{{galaxy_docker_docker_image}}"
-    path: "{{docker_build_dir}}/custom_image"
+    path: "{{galaxy_docker_docker_build_dir}}/custom_image"
     force: yes
     state: present
     pull: "{{ (not galaxy_docker_change_uids) | bool}}"
 
 - name: remove docker build directory
   file:
-    path: "{{docker_build_dir}}/custom_image"
+    path: "{{galaxy_docker_docker_build_dir}}/custom_image"
     state: absent
