--- a/roles/galaxy-docker/tasks/provision/import/main.yml
+++ b/roles/galaxy-docker/tasks/provision/import/main.yml
@@ -9,7 +9,7 @@
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
-# tasks file for importdb
+# tasks file for galaxy_docker_import_database
 # This imports a  database in galaxy.
 # This does overwrite the existing database.
 
@@ -33,7 +33,7 @@
 
 - name: Display when no files are found
   debug:
-    msg: "No files in {{galaxy_docker_galaxy_docker_import_db_dir}}. Skipping importdb role"
+    msg: "No files in {{galaxy_docker_galaxy_docker_import_db_dir}}. Skipping galaxy_docker_import_database role"
   when: "dump_file_list.matched < 1"
 
 - include: import.yml
