--- a/roles/galaxy-docker/tasks/backups/cronbackupdb.yml
+++ b/roles/galaxy-docker/tasks/backups/cronbackupdb.yml
@@ -9,7 +9,7 @@
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
-# tasks file for cronbackupdb
+# tasks file for galaxy_docker_backup_cron
 # This installs backup scripts in the backup folder and sets cron jobs to run those scripts
 
 - name: create backup folder with logs and scripts subfolders
