--- a/roles/galaxy-docker/vars/main.yml
+++ b/roles/galaxy-docker/vars/main.yml
@@ -11,13 +11,13 @@
 
 # vars file for galaxy-docker
 
-# vars for addldap
-ldap: "{{ galaxy_docker_ldap_defaults | combine(galaxy_docker_ldap_settings) }}"
+# vars for ldap
+galaxy_docker_ldap_config: "{{ galaxy_docker_ldap_defaults | combine(galaxy_docker_ldap_settings) }}"
 
-# vars for cronbackupdb
+# vars for galaxy_docker_backup_cron
 backup_galaxy_rsync_settings: "{{ galaxy_docker_backup_rsync_settings_default | combine(galaxy_docker_backup_database_rsync_settings)  }}"
 
-# vars for installtools:
+# vars for galaxy_docker_provision_tools:
 galaxy_docker_ephemeris_package: ephemeris
 galaxy_docker_ephemeris_version: 0.7.0
 
