--- a/roles/galaxy-docker/tasks/template_galaxy_settings/main.yml
+++ b/roles/galaxy-docker/tasks/template_galaxy_settings/main.yml
@@ -27,6 +27,6 @@
   when: galaxy_docker_cluster
 
 - include: setupsge.yml
-  when: setupsge
+  when: galaxy_docker_template_sge
 
 - include: report_user.yml
