--- a/roles/galaxy-docker/tasks/prepare_docker/main.yml
+++ b/roles/galaxy-docker/tasks/prepare_docker/main.yml
@@ -2,7 +2,7 @@
   when: galaxy_docker_change_uids
 
 - include: customimage.yml
-  when: (customimage or galaxy_docker_change_uids)
+  when: (galaxy_docker_custom_image or galaxy_docker_change_uids)
 
 - include: create_export_folder.yml
   become: "{{galaxy_docker_become}}"
