--- a/test/group_vars/test/upgrade.settings
+++ b/test/group_vars/test/upgrade.settings
@@ -7,5 +7,5 @@ galaxy_docker_upgrade_test_settings:
   galaxy_docker_ufw_profile: test_upgrade_galaxy
   galaxy_docker_web_port: 8888
   galaxy_docker_web_port_public: 8880
+  galaxy_docker_sftp_port: 8822
   galaxy_brand: "Test upgrade of Galaxy to 17.05"
-
