--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,9 +4,10 @@ pages:
   - Home: index.md
   - User guide:
       - Installing galaxy-docker-ansible: user_guide/installation.md
-      - Configuring a galaxy instance: user_guide/configure_instance.md
+      - Configuring a galaxy instance for a vm: user_guide/configure_instance.md
       - Configure a galaxy instance for running on a cluster: user_guide/configure_cluster_instance.md
       - Installing and administrating a galaxy instance: user_guide/install_administrate.md
+      - Installing and administrating a galaxy instance on a cluster: user_guide/install_administrate_cluster.md
   - Developer documentation:
     - Introduction: developer_docs/introduction.md
     - Install docker: developer_docs/installdocker.md
