--- a/host_vars/cluster_example_host/docker.settings
+++ b/host_vars/cluster_example_host/docker.settings
@@ -14,3 +14,7 @@ galaxy_docker_container_hostname: "galaxy-docker"
 #galaxy_docker_extra_ports:
 #  - "6444:6444"
 #  - "6445:6445"
+
+bgruening_galaxy_stable_version: 17.05
+galaxy_docker_custom_image_lines:
+  - run sed -i '3iecho "10.0.0.1 head-node" >> /etc/hosts' /usr/bin/startup
