--- a/test/host_vars/cluster-test/cluster.settings
+++ b/test/host_vars/cluster-test/cluster.settings
@@ -1,6 +1,10 @@
+galaxy_docker_cluster: sge
 galaxy_docker_gridengine_master_host: "ogs-head"
 galaxy_docker_cluster_virtualenv: "{{galaxy_docker_shared_cluster_directory}}/galaxy_venv"
 #galaxy_docker_cluster_embed_metadata_in_job: False
 galaxy_docker_cluster_environment_variables:
   LC_ALL: "en_US.UTF-8"
 galaxy_docker_shared_cluster_directory: "/exports/galaxy"
+
+galaxy_docker_custom_image_lines:
+  - run sed -i '3iecho "192.168.99.100 ogs-head" >> /etc/hosts' /usr/bin/startup
