--- a/host_vars/cluster_example_host/docker.settings
+++ b/host_vars/cluster_example_host/docker.settings
@@ -17,4 +17,4 @@ galaxy_docker_container_hostname: "galaxy-docker"
 
 bgruening_galaxy_stable_version: 17.05
 galaxy_docker_custom_image_lines:
-  - run sed -i '3iecho "10.0.0.1 head-node" >> /etc/hosts' /usr/bin/startup
+  - RUN sed -i '3iecho "10.0.0.1 head-node" >> /etc/hosts' /usr/bin/startup
