--- a/test/host_vars/cluster-test/docker.settings
+++ b/test/host_vars/cluster-test/docker.settings
@@ -12,5 +12,6 @@ galaxy_docker_extra_ports:
   - "6444:6444"
   - "6445:6445"
 
+bgruening_galaxy_stable_version: 17.05
 galaxy_docker_custom_image_lines:
-  - run sed -i '3iecho "192.168.99.100 ogs-head" >> /etc/hosts' /usr/bin/startup
+  - RUN sed -i '3iecho "192.168.99.100 ogs-head" >> /etc/hosts' /usr/bin/startup
