--- a/roles/galaxy-docker/tasks/prepare_docker/customimage.yml
+++ b/roles/galaxy-docker/tasks/prepare_docker/customimage.yml
@@ -8,6 +8,11 @@
 # For commercial users or users who do not want to follow the AGPL, please contact us to obtain a separate license.
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
+- name: Create docker build directory
+  file:
+    path: "{{galaxy_docker_docker_build_dir}}/custom_image"
+    state: directory
+    mode: 0600
 
 - name: Copy files to docker build directory
   copy:
