added access control lists to required packages

--- a/roles/galaxy-docker/tasks/prerequisites/install_packages.yml
+++ b/roles/galaxy-docker/tasks/prerequisites/install_packages.yml
@@ -29,3 +29,8 @@
   pip:
     name: "passlib"
     state: latest
+
+- name: install access control lists to allow user switching during playbook.
+  package:
+    name: acl
+    state: present
