--- a/test/files/test/dbkeys/dbkeys.yaml
+++ b/test/files/test/dbkeys/dbkeys.yaml
@@ -1,20 +1,15 @@
 # configuration for fetch and index genomes
 
 data_managers:
-    # Data manager ID
     - id: data_manager_fetch_genome_all_fasta_dbkey
-      # tool parameters, nested parameters should be specified using a pipe (|)
       params:
-        - 'dbkey_source|dbkey': '{{ item }}'
-        - 'reference_source|reference_source_selector': 'ucsc'
-        - 'reference_source|requested_dbkey': '{{ item }}'
-      # Items refere to a list of variables you want to run this data manager. You can use them inside the param field with {{ item }}
-      # In case of genome for example you can run this DM with multiple genomes, or you could give multiple URLs.
-      items:
-        - eboVir3
-        #- dm3
-        #- mm9
-      # Name of the data-tables you want to reload after your DM are finished. This can be important for subsequent data managers
+        - 'dbkey_source|dbkey_source_selector': 'new'
+        - 'dbkey_source|dbkey': 'RhinoVirusA'
+        - 'dbkey_source|dbkey_name': 'RhinoVirus A (NC_001617.1)'
+        - 'sequence_name': '{{ item.name }}'
+        - 'sequence_id': 'RhinoVirusA'
+        - 'reference_source|reference_source_selector': 'ncbi'
+        - 'reference_source|requested_identifier': 'NC_001617.1'
       data_table_reload:
         - all_fasta
         - __dbkeys__
