--- a/roles/galaxy-docker/tasks/provision/container_running_check.yml
+++ b/roles/galaxy-docker/tasks/provision/container_running_check.yml
@@ -12,18 +12,12 @@
 # this task installs ephemeris. It is used for installing tools and genomes.
 
 - name: register whether the production container is running
-  command: "docker inspect -f {{inspect}} {{galaxy_docker_container_name}}"
-  vars:
-    inspect: !unsafe '{{.State.Running}}'
+  command: "docker ps -q -f name={{galaxy_docker_container_name}}$"
   register: production_container_running
-  ignore_errors: yes # If the container does not exist this will run.
 
 - name: register whether the docker provision container is running
-  command: "docker inspect -f {{inspect}} {{galaxy_docker_provision_container_name}}"
-  vars:
-    inspect: !unsafe '{{.State.Running}}'
+  command: "docker ps -q -f name={{galaxy_docker_provision_container_name}}$"
   register: provision_container_running
-  ignore_errors: yes # If the container does not exist this will run.
 
 - name: Show docker inspection results
   debug:
