--- a/roles/galaxy-docker/tasks/provision/ephemeris_jobs.yml
+++ b/roles/galaxy-docker/tasks/provision/ephemeris_jobs.yml
@@ -6,11 +6,8 @@
   when: galaxy_docker_provision_tools
 
 - name: register whether the docker provision container is running
-  command: "docker inspect -f {{inspect}} {{galaxy_docker_provision_container_name}}"
-  vars:
-    inspect: !unsafe '{{.State.Running}}'
+  command: "docker ps -f name={{galaxy_docker_provision_container_name}}$"
   register: provision_container_running
-  ignore_errors: yes # If the container does not exist this will run.
 
 #- name: Restart galaxy in provision container before installing genomes
 #  command: echo "this always reports as changed."
@@ -25,11 +22,8 @@
   when: galaxy_docker_provision_genomes
 
 - name: register whether the docker provision container is running
-  command: "docker inspect -f {{inspect}} {{galaxy_docker_provision_container_name}}"
-  vars:
-    inspect: !unsafe '{{.State.Running}}'
+  command: "docker ps -f name={{galaxy_docker_provision_container_name}}$"
   register: provision_container_running
-  ignore_errors: yes # If the container does not exist this will run.
 
 - name: Remove the docker provision container
   docker_container:
