--- a/roles/galaxy-docker/tasks/provision/installgenomes.yml
+++ b/roles/galaxy-docker/tasks/provision/installgenomes.yml
@@ -29,28 +29,6 @@
     var: dbkeys
     verbosity: 1
 
-# This should be fed from the command line.
-- name: delete api key from files
-  lineinfile:
-    destfile: "{{item.path}}"
-    regexp: "api_key:.*"
-    state: absent
-  with_items:
-    - "{{dbkeys.files}}"
-  become: no
-  delegate_to: 127.0.0.1
-
-# It should be this instance. So no room for interpretation in the the yamls.
-- name: delete galaxy_instance from files
-  lineinfile:
-    destfile: "{{item.path}}"
-    regexp: "galaxy_instance:.*"
-    state: absent
-  with_items:
-    - "{{dbkeys.files}}"
-  become: no
-  delegate_to: 127.0.0.1
-
 - name: Move dbkeys to galaxy server
   copy:
     dest: "{{galaxy_docker_dbkeys_dir}}/{{item.path | basename}}"
@@ -60,12 +38,29 @@
   with_items:
     - "{{dbkeys.files}}"
 
+# This should be fed from the command line.
+- name: delete api key from files
+  lineinfile:
+    destfile: "{{galaxy_docker_dbkeys_dir}}/{{item.path | basename}}"
+    regexp: "api_key:.*"
+    state: absent
+  with_items:
+    - "{{dbkeys.files}}"
+
+# It should be this instance. So no room for interpretation in the the yamls.
+- name: delete galaxy_instance from files
+  lineinfile:
+    destfile: "{{galaxy_docker_dbkeys_dir}}/{{item.path | basename}}"
+    regexp: "galaxy_instance:.*"
+    state: absent
+  with_items:
+    - "{{dbkeys.files}}"
+
 - name: Use ephemeris run-data-managers to run data managers
   command: "{{galaxy_docker_docker_user_virtualenv}}/bin/run-data-managers -g localhost:{{galaxy_docker_provision_port}} -a {{galaxy_admin_api_key}} --config {{galaxy_docker_dbkeys_dir}}/{{item.path | basename}} -v"
   with_items: "{{dbkeys.files}}"
   ignore_errors: yes # If databases fail galaxy is still restarted so the ones that did not fail are available
   register: result
-  notify: restart galaxy in container
 
 - name: Debug ephemeris output
   debug:
